# coursework_c

./: .replit  CMakeLists.txt  example  example1  gemerald  lemin.h  main  main.cpp  push.sh  start.sh  Курсач с++.xlsx  Курсач_С++.docx  Курсовая.docx
generator_src/: Makefile  gen.cpp
include/: classes.h  lem-in.h
libft/: CMakeLists.txt
libft/includes/: get_next_line.h  libft.h
libft/src/: ft_atoul.cpp  ft_bzero.cpp  ft_create_vector.cpp  ft_isdigitstr.cpp  ft_isspace.cpp  ft_memalloc.cpp  ft_memdel.cpp  ft_putnbr.cpp  ft_putstr.cpp  ft_strdel.cpp  ft_strequ.cpp  ft_strjoin.cpp  ft_strrchr.cpp  ft_strsplit.cpp  ft_strsub.cpp  get_next_line.cpp
project/: CMakeLists.txt
project/inc/: hash_class.h  init_class.h  lemin.h  moving_ants_class.h  output_class.h  reading_class.h  solution_handler_class.h  valid_class.h
project/src/: cleaner.cpp  error_handler.cpp  hash.cpp  init.cpp  main.cpp  moving_ants.cpp  reading_and_output.cpp  solution_handler.cpp  validation.cpp
src/: CMakeLists.txt  alg_main.cpp  bellman-ford.cpp  classes.cpp  compare_ways_and_move_ants.cpp  main.cpp  read_file.cpp  split_rooms_and_repair.cpp  utils.cpp
